# package_resolver

./: .gitignore  CMakeLists.txt  README.md  config.h  loader.cpp  loader.h  main.cpp  package.cpp  package.h  parser.cpp  parser.h  solver.cpp  solver.h  threadpool.h  version_parser.cpp  version_parser.h
